--- a/index.html
+++ b/index.html
@@ -8,6 +8,145 @@
     <title>Image-Gallery</title>
 </head>
 <body>
-    
+    <!-- Global Container -->
+    <div class="flex items-center justify-center  bg-cyan-50 ">
+        <!-- Cart Container -->
+        <div class="flex flex-col items-center justify-center my-20 space-y-6 py-8 px-6 md:px-20 bg-white rounded-xl md:py-30">
+            <!-- Menu Container -->
+            <div class="flex flex-col items-center justify-center w-full space-y-2 md:flex-row md:space-y-0 md:space-x-8 md:justify-end md:mb-4 ">
+                <div class="group">
+                    <a href="/">Vector</a>
+                    <div class="mx-2 mt-0.5 border-2 border-b-black opacity-0 group-hover:opacity-100 duration-500">
+                    </div>
+                </div>
+                <div class="group">
+                    <a href="/">Illustration</a>
+                    <div class="mx-2 mt-0.5 border-2 border-b-black opacity-0 group-hover:opacity-100 duration-500">
+                    </div>
+                </div>
+                <div class="group">
+                    <a href="/">Images</a>
+                    <div class="mx-2 mt-0.5 border-2 border-b-black opacity-0 group-hover:opacity-100 duration-500">
+                    </div>
+                </div>
+                <div class="group">
+                    <a href="/">Icons</a>
+                    <div class="mx-2 mt-0.5 border-2 border-b-black opacity-0 group-hover:opacity-100 duration-500">
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- Search Container -->
+            <div class="flex flex-col justify-center w-full space-y-4 items-center  md:space-y-0 md:justify-between md:flex-row">
+                <!-- input Wrapper -->
+                <div class="flex flex-row border-b">
+                    <input type="text" class=" border-none focus:outline-none ml-4 md:w-80 " placeholder="Search">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                      </svg>
+                </div>
+                <!-- Button wrapper -->
+                <div class="flex items-center justify-center">
+                    <button class="bg-black text-white px-20 py-1.5 mb-4 rounded-2xl hover:bg-white hover:text-black shadow-md shadow-gray-300 duration-500 md:px-6  ">
+                        Upload
+                    </button>
+                </div>
+            </div>
+
+            <!-- Image Container -->
+            <div class="grid md:grid-cols-3 gap-4">
+                <!-- Image Wrapper  -->
+                <div class="relative group">
+                    <img src="/image1.jpg" class="w-72" alt="">
+                    <div class=" flex flex-row items-center justify-between w-full absolute bottom-0 left-0 right-0 w-full bg-black text-white px-1 opacity-0 duration-500 group-hover:bg-opacity-70 group-hover:opacity-100">
+                        <!-- Info -->
+                        <div class="flex flex-col space-y-0.5 justify-center text-white">
+                            <p>Sample Image</p>
+                            <p>4224 likes - 1920 shares</p>
+                        </div>
+                        <!-- Bookmark -->
+                        <div class="flex items-center justify-center">
+                            <img src="/bookmark.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="relative group">
+                    <img src="/image2.jpg" class="w-72" alt="">
+                    <div class=" flex flex-row items-center justify-between w-full absolute bottom-0 left-0 right-0 w-full bg-black text-white px-1 opacity-0 duration-500 group-hover:bg-opacity-70 group-hover:opacity-100">
+                        <!-- Info -->
+                        <div class="flex flex-col space-y-0.5 justify-center text-white">
+                            <p>Sample Image</p>
+                            <p>4224 likes - 1920 shares</p>
+                        </div>
+                        <!-- Bookmark -->
+                        <div class="flex items-center justify-center">
+                            <img src="/bookmark.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="relative group">
+                    <img src="/image3.jpg" class="w-72" alt="">
+                    <div class=" flex flex-row items-center justify-between w-full absolute bottom-0 left-0 right-0 w-full bg-black text-white px-1 opacity-0 duration-500 group-hover:bg-opacity-70 group-hover:opacity-100">
+                        <!-- Info -->
+                        <div class="flex flex-col space-y-0.5 justify-center text-white">
+                            <p>Sample Image</p>
+                            <p>4224 likes - 1920 shares</p>
+                        </div>
+                        <!-- Bookmark -->
+                        <div class="flex items-center justify-center">
+                            <img src="/bookmark.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="relative group">
+                    <img src="/image4.jpg" class="w-72" alt="">
+                    <div class=" flex flex-row items-center justify-between w-full absolute bottom-0 left-0 right-0 w-full bg-black text-white px-1 opacity-0 duration-500 group-hover:bg-opacity-70 group-hover:opacity-100">
+                        <!-- Info -->
+                        <div class="flex flex-col space-y-0.5 justify-center text-white">
+                            <p>Sample Image</p>
+                            <p>4224 likes - 1920 shares</p>
+                        </div>
+                        <!-- Bookmark -->
+                        <div class="flex items-center justify-center">
+                            <img src="/bookmark.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="relative group">
+                    <img src="/image5.jpg" class="w-72" alt="">
+                    <div class=" flex flex-row items-center justify-between w-full absolute bottom-0 left-0 right-0 w-full bg-black text-white px-1 opacity-0 duration-500 group-hover:bg-opacity-70 group-hover:opacity-100">
+                        <!-- Info -->
+                        <div class="flex flex-col space-y-0.5 justify-center text-white">
+                            <p>Sample Image</p>
+                            <p>4224 likes - 1920 shares</p>
+                        </div>
+                        <!-- Bookmark -->
+                        <div class="flex items-center justify-center">
+                            <img src="/bookmark.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="relative group">
+                    <img src="/image6.jpg" class="w-72" alt="">
+                    <div class=" flex flex-row items-center justify-between w-full absolute bottom-0 left-0 right-0 w-full bg-black text-white px-1 opacity-0 duration-500 group-hover:bg-opacity-70 group-hover:opacity-100">
+                        <!-- Info -->
+                        <div class="flex flex-col space-y-0.5 justify-center text-white">
+                            <p>Sample Image</p>
+                            <p>4224 likes - 1920 shares</p>
+                        </div>
+                        <!-- Bookmark -->
+                        <div class="flex items-center justify-center">
+                            <img src="/bookmark.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+        
+    </div>
 </body>
 </html>
+
